--- a/lerna.json
+++ b/lerna.json
@@ -4,9 +4,9 @@
   "useWorkspaces": true,
   "commands": {
     "publish": {
-      "allowBranch": "master"
+      "allowBranch": "shilman/3.4.0-alpha.2"
     }
   },
   "concurrency": 1,
-  "version": "3.4.0-alpha.1"
+  "version": "3.4.0-alpha.2"
 }
