--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,6 +155,11 @@ jobs:
           key: docs-dependencies-{{ checksum "docs/yarn.lock" }}
           paths:
             - docs/node_modules
+      - save_cache:
+          name: "Cache built docs"
+          key: built-docs-{{ .Revision }}
+          paths:
+            - docs/public
   lint:
     <<: *defaults
     steps:
@@ -263,10 +268,15 @@ jobs:
   deploy:
     <<: *defaults
     steps:
+      - restore_cache:
+          name: "Restore built docs"
+          keys:
+            - built-docs-{{ .Revision }}
       - run:
           name: "Deploy"
           command: |
-            echo "TODO"
+            cd docs
+            yarn deploy:ci
 workflows:
   version: 2
   build_accept_deploy:
@@ -294,3 +304,11 @@ workflows:
       - cli-latest-cra:
           requires:
             - build
+      - deploy:
+          requires:
+            - docs
+          filters:
+            branches:
+              only:
+                - release/3.3
+
