--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,6 +268,7 @@ jobs:
   deploy:
     <<: *defaults
     steps:
+      - checkout
       - restore_cache:
           name: "Restore built docs"
           keys:
