--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -46,7 +46,7 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.0",
     "style-loader": "^0.23.0",
-    "typescript": "latest",
+    "typescript": "^3.9.3",
     "webpack": "^4.33.0"
   },
   "peerDependencies": {
