--- a/examples/cra-ts-essentials/package.json
+++ b/examples/cra-ts-essentials/package.json
@@ -31,7 +31,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "3.4.1",
-    "typescript": "3.8.3"
+    "typescript": "^3.9.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "6.0.20",
