--- a/examples/angular-cli/package.json
+++ b/examples/angular-cli/package.json
@@ -61,7 +61,7 @@
     "jest": "^26.0.0",
     "jest-preset-angular": "^8.2.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.9.1",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   },
   "storybook": {
