--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -49,8 +49,7 @@
     "react-popper-tooltip": "^3.1.0",
     "react-syntax-highlighter": "^13.5.0",
     "react-textarea-autosize": "^8.1.1",
-    "ts-dedent": "^1.1.1",
-    "uuid": "^8.0.0"
+    "ts-dedent": "^1.1.1"
   },
   "devDependencies": {
     "css": "^3.0.0",
