--- a/lib/client-api/package.json
+++ b/lib/client-api/package.json
@@ -41,14 +41,12 @@
     "lodash": "^4.17.15",
     "memoizerific": "^1.11.3",
     "qs": "^6.6.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "stable": "^0.1.8",
     "store2": "^2.7.1",
     "ts-dedent": "^1.1.1",
     "util-deprecate": "^1.0.2"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
   },
   "publishConfig": {
     "access": "public"
