--- a/lib/source-loader/package.json
+++ b/lib/source-loader/package.json
@@ -37,11 +37,9 @@
     "global": "^4.3.2",
     "loader-utils": "^2.0.0",
     "prettier": "^2.0.5",
-    "regenerator-runtime": "^0.13.3"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
+    "regenerator-runtime": "^0.13.3",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   },
   "publishConfig": {
     "access": "public"
