--- a/lib/theming/package.json
+++ b/lib/theming/package.json
@@ -39,11 +39,9 @@
     "memoizerific": "^1.11.3",
     "polished": "^3.4.4",
     "resolve-from": "^5.0.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "ts-dedent": "^1.1.1"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
   },
   "publishConfig": {
     "access": "public"
