--- a/addons/cssresources/package.json
+++ b/addons/cssresources/package.json
@@ -40,17 +40,13 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.15.2",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "react-dom": "^16.12.0"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
+    "enzyme-adapter-react-16": "^1.15.2"
   },
   "publishConfig": {
     "access": "public"
