--- a/addons/design-assets/package.json
+++ b/addons/design-assets/package.json
@@ -43,12 +43,10 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1",
     "use-image": "^1.0.3"
-  },
-  "peerDependencies": {
-    "react-dom": "*"
   },
   "publishConfig": {
     "access": "public"
