--- a/addons/jest/package.json
+++ b/addons/jest/package.json
@@ -43,16 +43,13 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-sizeme": "^2.5.2",
     "regenerator-runtime": "^0.13.3",
     "upath": "^1.1.0"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.15.2"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
   },
   "publishConfig": {
     "access": "public"
