--- a/app/ember/package.json
+++ b/app/ember/package.json
@@ -42,9 +42,7 @@
     "@babel/core": "*",
     "babel-plugin-ember-modules-api-polyfill": "^2.12.0",
     "babel-plugin-htmlbars-inline-precompile": "2 || 3",
-    "ember-source": "^3.16.0",
-    "react": "*",
-    "react-dom": "*"
+    "ember-source": "^3.16.0"
   },
   "engines": {
     "node": ">=8.0.0"
