--- a/app/rax/package.json
+++ b/app/rax/package.json
@@ -47,9 +47,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "rax": "^0.4.0 || ^1.0.0",
-    "react": "*",
-    "react-dom": "*"
+    "rax": "^0.4.0 || ^1.0.0"
   },
   "publishConfig": {
     "access": "public"
