--- a/addons/a11y/package.json
+++ b/addons/a11y/package.json
@@ -45,6 +45,8 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "lodash": "^4.17.15",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-sizeme": "^2.5.2",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1",
@@ -52,13 +54,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
-    "@types/webpack-env": "^1.15.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
+    "@types/webpack-env": "^1.15.2"
   },
   "publishConfig": {
     "access": "public"
