--- a/addons/controls/package.json
+++ b/addons/controls/package.json
@@ -37,11 +37,9 @@
     "@storybook/node-logger": "6.0.0-rc.13",
     "@storybook/theming": "6.0.0-rc.13",
     "core-js": "^3.0.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "ts-dedent": "^1.1.1"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
   },
   "publishConfig": {
     "access": "public"
