--- a/addons/links/package.json
+++ b/addons/links/package.json
@@ -40,15 +40,13 @@
     "prop-types": "^15.7.2",
     "qs": "^6.6.0",
     "regenerator-runtime": "^0.13.3",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "ts-dedent": "^1.1.1"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.15.2",
     "enzyme": "^3.11.0"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
   },
   "publishConfig": {
     "access": "public"
