--- a/addons/queryparams/package.json
+++ b/addons/queryparams/package.json
@@ -40,14 +40,12 @@
     "global": "^4.3.2",
     "qs": "^6.6.0",
     "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.15.2"
-  },
-  "peerDependencies": {
-    "react-dom": "*"
   },
   "publishConfig": {
     "access": "public"
