--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -47,6 +47,8 @@
     "pretty-format": "^25.5.0",
     "read-pkg-up": "^7.0.0",
     "regenerator-runtime": "^0.13.3",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "ts-dedent": "^1.1.1"
   },
   "devDependencies": {
@@ -55,11 +57,7 @@
     "babel-loader": "^8.0.6",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.4.1",
-    "jest-emotion": "^10.0.17",
-    "react": "^16.8.3"
-  },
-  "peerDependencies": {
-    "react-dom": "*"
+    "jest-emotion": "^10.0.17"
   },
   "publishConfig": {
     "access": "public"
