--- a/addons/storysource/package.json
+++ b/addons/storysource/package.json
@@ -41,18 +41,14 @@
     "loader-utils": "^2.0.0",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
-    "react": "^16.9.17",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-syntax-highlighter": "^12.2.1",
     "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
     "@types/react": "^16.9.27",
     "@types/react-syntax-highlighter": "^11.0.4"
-  },
-  "peerDependencies": {
-    "@storybook/source-loader": "*",
-    "react": "*",
-    "react-dom": "*"
   },
   "publishConfig": {
     "access": "public"
