--- a/addons/toolbars/package.json
+++ b/addons/toolbars/package.json
@@ -34,11 +34,9 @@
     "@storybook/api": "6.0.0-rc.13",
     "@storybook/client-api": "6.0.0-rc.13",
     "@storybook/components": "6.0.0-rc.13",
-    "core-js": "^3.0.1"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
+    "core-js": "^3.0.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   },
   "publishConfig": {
     "access": "public"
