--- a/app/html/package.json
+++ b/app/html/package.json
@@ -44,9 +44,7 @@
     "ts-dedent": "^1.1.1"
   },
   "peerDependencies": {
-    "@babel/core": "*",
-    "react": "*",
-    "react-dom": "*"
+    "@babel/core": "*"
   },
   "engines": {
     "node": ">=8.0.0"
