--- a/app/react/package.json
+++ b/app/react/package.json
@@ -53,6 +53,8 @@
     "react-docgen-typescript-plugin": "^0.5.1",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "webpack": "^4.43.0"
   },
   "devDependencies": {
@@ -61,9 +63,7 @@
     "@types/webpack": "^4.41.12"
   },
   "peerDependencies": {
-    "@babel/core": "^7.0.1",
-    "react": "*",
-    "react-dom": "*"
+    "@babel/core": "^7.0.1"
   },
   "engines": {
     "node": ">=8.0.0"
