--- a/app/web-components/package.json
+++ b/app/web-components/package.json
@@ -53,9 +53,7 @@
   "peerDependencies": {
     "@babel/core": "*",
     "babel-loader": "^7.0.0 || ^8.0.0",
-    "lit-html": "^1.0.0",
-    "react": "*",
-    "react-dom": "*"
+    "lit-html": "^1.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
