--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -49,6 +49,7 @@
     "regenerator-runtime": "^0.13.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-test-renderer": "^16.8.3",
     "ts-dedent": "^1.1.1"
   },
   "devDependencies": {
