--- a/app/server/package.json
+++ b/app/server/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@storybook/addons": "6.0.0-rc.14",
+    "@storybook/api": "6.0.0-rc.14",
     "@storybook/core": "6.0.0-rc.14",
     "@storybook/node-logger": "6.0.0-rc.14",
     "@types/webpack-env": "^1.15.2",
