--- a/app/vue/package.json
+++ b/app/vue/package.json
@@ -48,6 +48,8 @@
     "@types/node": "^14.0.10",
     "@types/webpack": "^4.41.12",
     "vue": "^2.6.8",
+    "vue-docgen-api": "^4.29.1",
+    "vue-docgen-loader": "^1.5.0",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.8"
   },
