--- a/addons/toolbars/package.json
+++ b/addons/toolbars/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-toolbars",
-  "version": "6.0.0-rc.30",
+  "version": "6.0.0",
   "description": "Storybook toolbars addon",
   "keywords": [
     "addon",
@@ -30,10 +30,10 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.0-rc.30",
-    "@storybook/api": "6.0.0-rc.30",
-    "@storybook/client-api": "6.0.0-rc.30",
-    "@storybook/components": "6.0.0-rc.30",
+    "@storybook/addons": "6.0.0",
+    "@storybook/api": "6.0.0",
+    "@storybook/client-api": "6.0.0",
+    "@storybook/components": "6.0.0",
     "core-js": "^3.0.1"
   },
   "peerDependencies": {
