--- a/addons/essentials/package.json
+++ b/addons/essentials/package.json
@@ -32,6 +32,7 @@
     "@storybook/addon-backgrounds": "6.0.2",
     "@storybook/addon-controls": "6.0.2",
     "@storybook/addon-docs": "6.0.2",
+    "@storybook/addon-toolbars": "6.0.2",
     "@storybook/addon-viewport": "6.0.2",
     "@storybook/addons": "6.0.2",
     "@storybook/api": "6.0.2",
