fix(deps): pin prettier to 2.0.x version
fixes #12217 fixes #12218
`prettier@2.1.0` introduced some breaking changes in its parsers. So we have to pin our dependency.

--- a/addons/storysource/package.json
+++ b/addons/storysource/package.json
@@ -39,7 +39,7 @@
     "core-js": "^3.0.1",
     "estraverse": "^4.2.0",
     "loader-utils": "^2.0.0",
-    "prettier": "^2.0.5",
+    "prettier": "~2.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.9.17",
     "react-syntax-highlighter": "^12.2.1",
