--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -102,7 +102,7 @@
     "jest-specific-snapshot": "^4.0.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.0.0",
-    "prettier": "^2.0.5",
+    "prettier": "~2.0.5",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-is": "^16.12.0",
