--- a/lib/source-loader/package.json
+++ b/lib/source-loader/package.json
@@ -37,7 +37,7 @@
     "global": "^4.3.2",
     "loader-utils": "^2.0.0",
     "lodash": "^4.17.15",
-    "prettier": "^2.0.5",
+    "prettier": "~2.0.5",
     "regenerator-runtime": "^0.13.3"
   },
   "peerDependencies": {
