--- a/package.json
+++ b/package.json
@@ -215,7 +215,7 @@
     "node-sass": "^4.14.0",
     "npmlog": "^4.1.2",
     "p-limit": "^2.3.0",
-    "prettier": "^2.0.5",
+    "prettier": "~2.0.5",
     "raf": "^3.4.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
