Add v2.0.0 of Mithril for peer dependencies
This will prevent the error when doing an npm install: `npm WARN @storybook/mithril@6.0.16 requires a peer of mithril@^1.1.6 but none is installed. You must install peer dependencies yourself.` #11742

--- a/app/mithril/package.json
+++ b/app/mithril/package.json
@@ -50,7 +50,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "mithril": "^1.1.6",
+    "mithril": "^1.1.6 || ^2.0.0",
     "react": "*",
     "react-dom": "*"
   },
