--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -77,6 +77,7 @@
     "remark-slug": "^6.0.0",
     "svelte-adapter": "^0.4.0",
     "svelte-preprocess": "^4.1.2",
+    "sveltedoc-parser": "^3.0.4",
     "ts-dedent": "^1.1.1",
     "util-deprecate": "^1.0.2"
   },
