--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -71,6 +71,7 @@
     "js-string-escape": "^1.0.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
+    "sveltedoc-parser": "^3.0.4",
     "react-element-to-jsx-string": "^14.3.1",
     "regenerator-runtime": "^0.13.3",
     "remark-external-links": "^6.0.0",
