--- a/addons/links/package.json
+++ b/addons/links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-links",
-  "version": "6.0.21",
+  "version": "6.1.0-alpha.0",
   "description": "Story Links addon for storybook",
   "keywords": [
     "addon",
@@ -29,11 +29,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.21",
-    "@storybook/client-logger": "6.0.21",
-    "@storybook/core-events": "6.0.21",
+    "@storybook/addons": "6.1.0-alpha.0",
+    "@storybook/client-logger": "6.1.0-alpha.0",
+    "@storybook/core-events": "6.1.0-alpha.0",
     "@storybook/csf": "0.0.1",
-    "@storybook/router": "6.0.21",
+    "@storybook/router": "6.1.0-alpha.0",
     "@types/qs": "^6.9.0",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
