--- a/app/server/package.json
+++ b/app/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/server",
-  "version": "6.0.21",
+  "version": "6.1.0-alpha.0",
   "description": "Storybook for Server: View HTML snippets from a server in isolation with Hot Reloading.",
   "keywords": [
     "storybook"
@@ -34,10 +34,10 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.21",
-    "@storybook/api": "6.0.21",
-    "@storybook/core": "6.0.21",
-    "@storybook/node-logger": "6.0.21",
+    "@storybook/addons": "6.1.0-alpha.0",
+    "@storybook/api": "6.1.0-alpha.0",
+    "@storybook/core": "6.1.0-alpha.0",
+    "@storybook/node-logger": "6.1.0-alpha.0",
     "@types/webpack-env": "^1.15.2",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
