--- a/examples/aurelia-kitchen-sink/package.json
+++ b/examples/aurelia-kitchen-sink/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-kitchen-sink",
-  "version": "6.0.21",
+  "version": "6.1.0-alpha.0",
   "private": true,
   "description": "An Aurelia client application.",
   "repository": {
@@ -22,18 +22,18 @@
   },
   "devDependencies": {
     "@aurelia/webpack-loader": "dev",
-    "@storybook/addon-a11y": "6.0.21",
-    "@storybook/addon-actions": "6.0.21",
-    "@storybook/addon-backgrounds": "6.0.21",
-    "@storybook/addon-docs": "6.0.21",
-    "@storybook/addon-jest": "6.0.21",
-    "@storybook/addon-knobs": "6.0.21",
-    "@storybook/addon-links": "6.0.21",
-    "@storybook/addon-storyshots": "6.0.21",
-    "@storybook/addon-storysource": "6.0.21",
-    "@storybook/addons": "6.0.21",
-    "@storybook/aurelia": "6.0.21",
-    "@storybook/source-loader": "6.0.21",
+    "@storybook/addon-a11y": "6.1.0-alpha.0",
+    "@storybook/addon-actions": "6.1.0-alpha.0",
+    "@storybook/addon-backgrounds": "6.1.0-alpha.0",
+    "@storybook/addon-docs": "6.1.0-alpha.0",
+    "@storybook/addon-jest": "6.1.0-alpha.0",
+    "@storybook/addon-knobs": "6.1.0-alpha.0",
+    "@storybook/addon-links": "6.1.0-alpha.0",
+    "@storybook/addon-storyshots": "6.1.0-alpha.0",
+    "@storybook/addon-storysource": "6.1.0-alpha.0",
+    "@storybook/addons": "6.1.0-alpha.0",
+    "@storybook/aurelia": "6.1.0-alpha.0",
+    "@storybook/source-loader": "6.1.0-alpha.0",
     "@types/node": "^14.0.10",
     "css-loader": "^3.0.0",
     "file-loader": "^4.2.0",
