--- a/examples/cra-kitchen-sink/package.json
+++ b/examples/cra-kitchen-sink/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-kitchen-sink",
-  "version": "6.0.21",
+  "version": "6.1.0-alpha.0",
   "private": true,
   "scripts": {
     "build": "react-scripts build",
@@ -18,19 +18,19 @@
     "react-lifecycles-compat": "^3.0.4"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "6.0.21",
-    "@storybook/addon-actions": "6.0.21",
-    "@storybook/addon-backgrounds": "6.0.21",
-    "@storybook/addon-docs": "6.0.21",
-    "@storybook/addon-events": "6.0.21",
-    "@storybook/addon-jest": "6.0.21",
-    "@storybook/addon-knobs": "6.0.21",
-    "@storybook/addon-links": "6.0.21",
-    "@storybook/addon-storyshots": "6.0.21",
-    "@storybook/addons": "6.0.21",
-    "@storybook/client-logger": "6.0.21",
-    "@storybook/react": "6.0.21",
-    "@storybook/theming": "6.0.21",
+    "@storybook/addon-a11y": "6.1.0-alpha.0",
+    "@storybook/addon-actions": "6.1.0-alpha.0",
+    "@storybook/addon-backgrounds": "6.1.0-alpha.0",
+    "@storybook/addon-docs": "6.1.0-alpha.0",
+    "@storybook/addon-events": "6.1.0-alpha.0",
+    "@storybook/addon-jest": "6.1.0-alpha.0",
+    "@storybook/addon-knobs": "6.1.0-alpha.0",
+    "@storybook/addon-links": "6.1.0-alpha.0",
+    "@storybook/addon-storyshots": "6.1.0-alpha.0",
+    "@storybook/addons": "6.1.0-alpha.0",
+    "@storybook/client-logger": "6.1.0-alpha.0",
+    "@storybook/react": "6.1.0-alpha.0",
+    "@storybook/theming": "6.1.0-alpha.0",
     "react-scripts": "^3.0.1"
   },
   "storybook": {
