--- a/examples/svelte-kitchen-sink/package.json
+++ b/examples/svelte-kitchen-sink/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-example",
-  "version": "6.0.21",
+  "version": "6.1.0-alpha.0",
   "private": true,
   "scripts": {
     "build-storybook": "build-storybook -s public",
@@ -10,19 +10,19 @@
     "global": "^4.3.2"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "6.0.21",
-    "@storybook/addon-actions": "6.0.21",
-    "@storybook/addon-backgrounds": "6.0.21",
-    "@storybook/addon-controls": "6.0.21",
-    "@storybook/addon-docs": "6.0.21",
-    "@storybook/addon-knobs": "6.0.21",
-    "@storybook/addon-links": "6.0.21",
-    "@storybook/addon-storyshots": "6.0.21",
-    "@storybook/addon-storysource": "6.0.21",
-    "@storybook/addon-viewport": "6.0.21",
-    "@storybook/addons": "6.0.21",
-    "@storybook/source-loader": "6.0.21",
-    "@storybook/svelte": "6.0.21"
+    "@storybook/addon-a11y": "6.1.0-alpha.0",
+    "@storybook/addon-actions": "6.1.0-alpha.0",
+    "@storybook/addon-backgrounds": "6.1.0-alpha.0",
+    "@storybook/addon-controls": "6.1.0-alpha.0",
+    "@storybook/addon-docs": "6.1.0-alpha.0",
+    "@storybook/addon-knobs": "6.1.0-alpha.0",
+    "@storybook/addon-links": "6.1.0-alpha.0",
+    "@storybook/addon-storyshots": "6.1.0-alpha.0",
+    "@storybook/addon-storysource": "6.1.0-alpha.0",
+    "@storybook/addon-viewport": "6.1.0-alpha.0",
+    "@storybook/addons": "6.1.0-alpha.0",
+    "@storybook/source-loader": "6.1.0-alpha.0",
+    "@storybook/svelte": "6.1.0-alpha.0"
   },
   "storybook": {
     "chromatic": {
