--- a/examples/vue-kitchen-sink/package.json
+++ b/examples/vue-kitchen-sink/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-example",
-  "version": "6.0.21",
+  "version": "6.1.0-alpha.0",
   "private": true,
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
@@ -14,19 +14,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
-    "@storybook/addon-a11y": "6.0.21",
-    "@storybook/addon-actions": "6.0.21",
-    "@storybook/addon-backgrounds": "6.0.21",
-    "@storybook/addon-controls": "6.0.21",
-    "@storybook/addon-docs": "6.0.21",
-    "@storybook/addon-knobs": "6.0.21",
-    "@storybook/addon-links": "6.0.21",
-    "@storybook/addon-storyshots": "6.0.21",
-    "@storybook/addon-storysource": "6.0.21",
-    "@storybook/addon-viewport": "6.0.21",
-    "@storybook/addons": "6.0.21",
-    "@storybook/source-loader": "6.0.21",
-    "@storybook/vue": "6.0.21",
+    "@storybook/addon-a11y": "6.1.0-alpha.0",
+    "@storybook/addon-actions": "6.1.0-alpha.0",
+    "@storybook/addon-backgrounds": "6.1.0-alpha.0",
+    "@storybook/addon-controls": "6.1.0-alpha.0",
+    "@storybook/addon-docs": "6.1.0-alpha.0",
+    "@storybook/addon-knobs": "6.1.0-alpha.0",
+    "@storybook/addon-links": "6.1.0-alpha.0",
+    "@storybook/addon-storyshots": "6.1.0-alpha.0",
+    "@storybook/addon-storysource": "6.1.0-alpha.0",
+    "@storybook/addon-viewport": "6.1.0-alpha.0",
+    "@storybook/addons": "6.1.0-alpha.0",
+    "@storybook/source-loader": "6.1.0-alpha.0",
+    "@storybook/vue": "6.1.0-alpha.0",
     "@vue/babel-preset-jsx": "^1.1.2",
     "babel-loader": "^8.0.5",
     "cross-env": "^7.0.0",
