--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/components",
-  "version": "6.0.21",
+  "version": "6.1.0-alpha.0",
   "description": "Core Storybook Components",
   "keywords": [
     "storybook"
@@ -28,9 +28,9 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/client-logger": "6.0.21",
+    "@storybook/client-logger": "6.1.0-alpha.0",
     "@storybook/csf": "0.0.1",
-    "@storybook/theming": "6.0.21",
+    "@storybook/theming": "6.1.0-alpha.0",
     "@types/overlayscrollbars": "^1.9.0",
     "@types/react-color": "^3.0.1",
     "@types/react-syntax-highlighter": "11.0.4",
