--- a/lib/node-logger/package.json
+++ b/lib/node-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/node-logger",
-  "version": "6.0.21",
+  "version": "6.1.0-alpha.0",
   "description": "",
   "keywords": [
     "storybook"
