--- a/addons/backgrounds/package.json
+++ b/addons/backgrounds/package.json
@@ -39,6 +39,7 @@
     "@storybook/core-events": "6.1.0-alpha.15",
     "@storybook/theming": "6.1.0-alpha.15",
     "core-js": "^3.0.1",
+    "global": "^4.3.2",
     "memoizerific": "^1.11.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
