fix: require.resolve loaders and add missing dependencies

--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -26,6 +26,7 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
+    "@aurelia/webpack-loader": "^0.7.0",
     "@storybook/addon-knobs": "6.1.0-alpha.3",
     "@storybook/addons": "6.1.0-alpha.3",
     "@storybook/core": "6.1.0-alpha.3",
@@ -33,6 +34,7 @@
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "global": "^4.3.2",
     "ts-loader": "^6.0.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.33.0"
   },
   "devDependencies": {
