--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -43,6 +43,7 @@
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "global": "^4.3.2",
     "postcss-loader": "^3.0.0",
+    "raw-loader": "^4.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
