--- a/app/web-components/package.json
+++ b/app/web-components/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/preset-env": "^7.11.5",
     "@storybook/addons": "6.1.0-alpha.3",
     "@storybook/core": "6.1.0-alpha.3",
     "@types/webpack-env": "^1.15.2",
