chore: simplify lint-staged script

--- a/package.json
+++ b/package.json
@@ -82,25 +82,7 @@
     }
   },
   "lint-staged": {
-    "*.html": [
-      "yarn lint:js --fix"
-    ],
-    "*.js": [
-      "yarn lint:js --fix"
-    ],
-    "*.json": [
-      "yarn lint:js --fix"
-    ],
-    "*.jsx": [
-      "yarn lint:js --fix"
-    ],
-    "*.mjs": [
-      "yarn lint:js --fix"
-    ],
-    "*.ts": [
-      "yarn lint:js --fix"
-    ],
-    "*.tsx": [
+    "*.{html,js,json,jsx,mjs,ts,tsx}": [
       "yarn lint:js --fix"
     ],
     "package.json": [
