--- a/addons/essentials/package.json
+++ b/addons/essentials/package.json
@@ -45,11 +45,18 @@
     "ts-dedent": "^1.1.1"
   },
   "devDependencies": {
+    "@storybook/vue": "6.1.0-alpha.8",
     "@types/jest": "^25.1.1",
     "@types/webpack-env": "^1.15.2"
   },
   "peerDependencies": {
+    "@storybook/vue": "6.1.0-alpha.8",
     "babel-loader": "^8.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@storybook/vue": {
+      "optional": true
+    }
   },
   "publishConfig": {
     "access": "public"
