📝 add story about polyfill in ember example

--- a/examples/ember-cli/package.json
+++ b/examples/ember-cli/package.json
@@ -11,6 +11,7 @@
     "storybook:dev": "yarn dev & start-storybook -p 9009 -s ember-output"
   },
   "dependencies": {
+    "ember-named-blocks-polyfill": "^0.2.3",
     "ember-template-compiler": "^1.9.0-alpha"
   },
   "devDependencies": {
