--- a/app/web-components/package.json
+++ b/app/web-components/package.json
@@ -40,6 +40,7 @@
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@storybook/addons": "6.1.0-alpha.12",
+    "@storybook/client-api": "6.1.0-alpha.12",
     "@storybook/core": "6.1.0-alpha.12",
     "@types/webpack-env": "^1.15.2",
     "babel-plugin-bundled-import-meta": "^0.3.1",
