--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/escodegen": "^0.0.6",
     "@types/express": "^4.17.6",
+    "@types/fs-extra": "^9.0.1",
     "@types/jest": "^25.1.1",
     "@types/js-yaml": "^3.12.4",
     "@types/lodash": "^4.14.150",
@@ -221,6 +222,7 @@
     "@cypress/webpack-preprocessor": "^5.1.2",
     "cypress": "4.7.0",
     "puppeteer": "^2.0.0",
+    "ts-loader": "^8.0.4",
     "verdaccio": "^4.5.1",
     "verdaccio-auth-memory": "^9.4.0"
   },
