--- a/app/html/package.json
+++ b/app/html/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@storybook/addons": "6.1.0-alpha.11",
+    "@storybook/client-api": "6.1.0-alpha.11",
     "@storybook/core": "6.1.0-alpha.11",
     "@types/webpack-env": "^1.15.2",
     "core-js": "^3.0.1",
