--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -42,6 +42,7 @@
     "copy-to-clipboard": "^3.0.8",
     "core-js": "^3.0.1",
     "core-js-pure": "^3.0.1",
+    "downshift": "^6.0.6",
     "emotion-theming": "^10.0.19",
     "fuse.js": "^3.6.1",
     "global": "^4.3.2",
