--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "react-test-renderer": "^16.8.3",
     "recursive-copy": "^2.0.10",
     "regenerator-runtime": "^0.13.3",
+    "remark": "^12.0.0",
     "remark-cli": "^8.0.0",
     "remark-lint": "^7.0.0",
     "remark-preset-lint-recommended": "^4.0.0",
@@ -213,6 +214,7 @@
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3",
     "wait-on": "^4.0.0",
+    "webpack": "^4.43.0",
     "window-size": "^1.1.1"
   },
   "optionalDependencies": {
