--- a/examples/aurelia-kitchen-sink/package.json
+++ b/examples/aurelia-kitchen-sink/package.json
@@ -16,12 +16,12 @@
     "storybook": "start-storybook -p 9009 -s dist"
   },
   "dependencies": {
-    "aurelia": "dev",
+    "aurelia": "^0.7.0",
     "bootstrap": "^4.3.1",
     "promise-polyfill": "^8.1.3"
   },
   "devDependencies": {
-    "@aurelia/webpack-loader": "dev",
+    "@aurelia/webpack-loader": "^0.7.0",
     "@storybook/addon-a11y": "6.1.0-alpha.18",
     "@storybook/addon-actions": "6.1.0-alpha.18",
     "@storybook/addon-backgrounds": "6.1.0-alpha.18",
