ci: use full checkout for `chromatic` step as it needs to have the git history to run properly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,12 +118,7 @@ jobs:
     executor: sb_node
     parallelism: 11
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
