Revert "ci: use a custom `checkout` step to avoid cloning the full repository"
This reverts commit c0cf960a

Sadly, the custom checkout steps wasn't working on fork.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,7 @@ jobs:
       class: large
       name: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - run:
           name: Remove examples
           command: rm -rf examples/
@@ -58,12 +53,7 @@ jobs:
       class: large
       name: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - restore_cache:
           name: Restore Yarn cache
           keys:
@@ -87,12 +77,7 @@ jobs:
       class: large
       name: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - run:
           name: Keep only root package
           command: rm -rf examples/ && rm -rf addons/ && rm -rf app/ && rm -rf lib/
@@ -144,12 +129,7 @@ jobs:
       name: sb_node
     parallelism: 11
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
@@ -165,12 +145,7 @@ jobs:
       class: large
       name: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
@@ -191,12 +166,7 @@ jobs:
     working_directory: /tmp/storybook
     parallelism: 10
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
@@ -226,12 +196,7 @@ jobs:
     working_directory: /tmp/storybook
     # parallelism: 10
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
@@ -260,12 +225,7 @@ jobs:
         environment:
           TERM: xterm
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
@@ -287,12 +247,7 @@ jobs:
       class: medium
       name: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
@@ -358,12 +313,7 @@ jobs:
   frontpage:
     executor: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - restore_cache:
           name: Restore core dependencies cache
           keys:
@@ -379,12 +329,7 @@ jobs:
       class: small
       name: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
@@ -393,12 +338,7 @@ jobs:
   test:
     executor: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
@@ -413,12 +353,7 @@ jobs:
       class: small
       name: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
-      - run:
-          name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+      - checkout
       - attach_workspace:
           at: .
       - run:
