Create, use and publish a prebuilt manager.

--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -20,8 +20,8 @@
   "files": [
     "dist/**/*",
     "dll/**/*",
+    "prebuilt/**/*",
     "types/**/*",
-    "README.md",
     "*.js",
     "*.d.ts",
     "ts3.4/**/*"
