--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -121,6 +121,7 @@
     "shelljs": "^0.8.3",
     "stable": "^0.1.8",
     "style-loader": "^1.2.1",
+    "telejson": "^5.0.2",
     "terser-webpack-plugin": "^3.0.0",
     "ts-dedent": "^1.1.1",
     "unfetch": "^4.1.0",
