--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -31,6 +31,7 @@
     "@reach/router": "^1.3.3",
     "@storybook/channels": "6.1.0-alpha.22",
     "@storybook/client-logger": "6.1.0-alpha.22",
+    "@storybook/components": "6.1.0-alpha.22",
     "@storybook/core-events": "6.1.0-alpha.22",
     "@storybook/csf": "0.0.1",
     "@storybook/router": "6.1.0-alpha.22",
