--- a/lib/client-api/package.json
+++ b/lib/client-api/package.json
@@ -43,6 +43,7 @@
     "qs": "^6.6.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "regenerator-runtime": "^0.13.3",
     "stable": "^0.1.8",
     "store2": "^2.7.1",
     "ts-dedent": "^1.1.1",
