--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -63,6 +63,8 @@
     "jest-vue-preprocessor": "^1.5.0"
   },
   "peerDependencies": {
+    "@storybook/vue": "*",
+    "vue": "*",
     "jest-preset-angular": "*",
     "jest-vue-preprocessor": "*"
   },
@@ -71,6 +73,12 @@
       "optional": true
     },
     "jest-vue-preprocessor": {
+      "optional": true
+    },
+    "@storybook/vue": {
+      "optional": true
+    },
+    "vue": {
       "optional": true
     }
   },
