--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -46,6 +46,7 @@
     "react": "^16.8.3",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.3",
+    "react-editable-json-tree": "^2.2.1",
     "react-popper-tooltip": "^3.1.0",
     "react-syntax-highlighter": "^13.5.0",
     "react-textarea-autosize": "^8.1.1",
