refactor(core): migrate `preview` to TS

--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -138,6 +138,7 @@
     "@types/dotenv-webpack": "^3.0.0",
     "@types/interpret": "^1.1.1",
     "@types/mock-fs": "^4.10.0",
+    "@types/react-dev-utils": "^9.0.4",
     "@types/terser-webpack-plugin": "^5.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
     "mock-fs": "^4.12.0"
