--- a/app/preact/package.json
+++ b/app/preact/package.json
@@ -48,7 +48,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "preact": "^8.0.0|^10.0.0"
+    "preact": "^8.0.0||^10.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
