Allow Storybook packages to use React 17.x per #12908

--- a/addons/cssresources/package.json
+++ b/addons/cssresources/package.json
@@ -39,7 +39,7 @@
     "@storybook/theming": "6.0.27",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
