--- a/addons/backgrounds/package.json
+++ b/addons/backgrounds/package.json
@@ -40,7 +40,7 @@
     "@storybook/theming": "6.0.27",
     "core-js": "^3.0.1",
     "memoizerific": "^1.11.3",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
