--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -56,7 +56,7 @@
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.4.1",
     "jest-emotion": "^10.0.17",
-    "react": "^16.8.3"
+    "react": "^16.8.3 || ^17.0.0"
   },
   "peerDependencies": {
     "react-dom": "*"
