--- a/examples/cra-kitchen-sink/package.json
+++ b/examples/cra-kitchen-sink/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "global": "^4.3.2",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "react-lifecycles-compat": "^3.0.4"
   },
