--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -42,7 +42,7 @@
     "global": "^4.3.2",
     "lodash": "^4.17.15",
     "memoizerific": "^1.11.3",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.3",
     "store2": "^2.7.1",
     "telejson": "^5.0.2",
