--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -43,7 +43,7 @@
     "overlayscrollbars": "^1.10.2",
     "polished": "^3.4.4",
     "popper.js": "^1.14.7",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.3",
     "react-popper-tooltip": "^2.11.0",
