--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -50,7 +50,7 @@
     "memoizerific": "^1.11.3",
     "polished": "^3.4.4",
     "qs": "^6.6.0",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3",
     "react-draggable": "^4.0.3",
     "react-helmet-async": "^1.0.2",
