Core: Allow React-DOM 17.x

--- a/addons/actions/package.json
+++ b/addons/actions/package.json
@@ -41,7 +41,7 @@
     "polished": "^3.4.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-inspector": "^5.0.1",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
