--- a/addons/knobs/package.json
+++ b/addons/knobs/package.json
@@ -46,7 +46,7 @@
     "qs": "^6.6.0",
     "react": "^16.8.3 || ^17.0.0",
     "react-color": "^2.17.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-lifecycles-compat": "^3.0.4",
     "react-select": "^3.0.8",
     "regenerator-runtime": "^0.13.7"
