--- a/addons/storysource/package.json
+++ b/addons/storysource/package.json
@@ -42,7 +42,7 @@
     "prettier": "~2.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.9.17",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-syntax-highlighter": "^13.5.0",
     "regenerator-runtime": "^0.13.7"
   },
