--- a/addons/backgrounds/package.json
+++ b/addons/backgrounds/package.json
@@ -42,7 +42,7 @@
     "global": "^4.3.2",
     "memoizerific": "^1.11.3",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
     "util-deprecate": "^1.0.2"
