--- a/addons/cssresources/package.json
+++ b/addons/cssresources/package.json
@@ -40,7 +40,7 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
