--- a/addons/design-assets/package.json
+++ b/addons/design-assets/package.json
@@ -43,7 +43,7 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
     "use-image": "^1.0.3"
