--- a/addons/essentials/package.json
+++ b/addons/essentials/package.json
@@ -39,7 +39,7 @@
     "@storybook/node-logger": "6.1.0-alpha.31",
     "core-js": "^3.0.1",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
   },
