--- a/addons/google-analytics/package.json
+++ b/addons/google-analytics/package.json
@@ -25,7 +25,7 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-ga": "^2.5.7",
     "regenerator-runtime": "^0.13.7"
   },
