--- a/addons/graphql/package.json
+++ b/addons/graphql/package.json
@@ -41,7 +41,7 @@
     "graphql": "^15.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "webpack": "^4.43.0"
   },
