--- a/addons/links/package.json
+++ b/addons/links/package.json
@@ -40,7 +40,7 @@
     "prop-types": "^15.7.2",
     "qs": "^6.6.0",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
   },
