--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -46,7 +46,7 @@
     "jest-specific-snapshot": "^4.0.0",
     "pretty-format": "^26.4.0",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-test-renderer": "^16.8.3",
     "read-pkg-up": "^7.0.0",
     "regenerator-runtime": "^0.13.7",
