--- a/app/react/package.json
+++ b/app/react/package.json
@@ -53,7 +53,7 @@
     "react": "^16.8.3",
     "react-dev-utils": "^10.0.0",
     "react-docgen-typescript-plugin": "^0.6.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-refresh": "^0.8.3",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
