--- a/examples/cra-ts-essentials/package.json
+++ b/examples/cra-ts-essentials/package.json
@@ -29,7 +29,7 @@
     "@types/react-dom": "16.9.8",
     "global": "^4.3.2",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.3"
   },
