--- a/lib/client-api/package.json
+++ b/lib/client-api/package.json
@@ -42,7 +42,7 @@
     "memoizerific": "^1.11.3",
     "qs": "^6.6.0",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "stable": "^0.1.8",
     "store2": "^2.7.1",
