--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -45,7 +45,7 @@
     "polished": "^3.4.4",
     "react": "^16.8.3 || ^17.0.0",
     "react-color": "^2.17.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "react-popper-tooltip": "^3.1.0",
     "react-syntax-highlighter": "^13.5.0",
     "react-textarea-autosize": "^8.1.1",
