--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -114,7 +114,7 @@
     "raw-loader": "^4.0.1",
     "react": "^16.8.3 || ^17.0.0",
     "react-dev-utils": "^10.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "resolve-from": "^5.0.0",
     "serve-favicon": "^2.5.0",
