--- a/lib/router/package.json
+++ b/lib/router/package.json
@@ -35,7 +35,7 @@
     "memoizerific": "^1.11.3",
     "qs": "^6.6.0",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
