--- a/lib/source-loader/package.json
+++ b/lib/source-loader/package.json
@@ -39,7 +39,7 @@
     "lodash": "^4.17.15",
     "prettier": "~2.0.5",
     "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "source-map": "^0.7.3"
   },
