--- a/addons/storysource/package.json
+++ b/addons/storysource/package.json
@@ -43,12 +43,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.17",
     "react-dom": "^16.8.3",
-    "react-syntax-highlighter": "^13.5.0",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
-    "@types/react": "^16.9.27",
-    "@types/react-syntax-highlighter": "^11.0.4"
+    "@types/react": "^16.9.27"
   },
   "publishConfig": {
     "access": "public"
