Move `react` and `react-dom` to peer deps
`react` and `react-dom` should always be peer dependencies of packages that provide react components to ensure that there's a single instance of those.

Plus, all packages depending on a package with `react` as peerDep should also have it as peerDeps (transitive peer dependencies) or as deps.

Finally, packages in `examples/*` are "end" packages using Storybook so they must provide `react` and `react-dom` in their deps/devDeps

--- a/addons/controls/package.json
+++ b/addons/controls/package.json
@@ -37,9 +37,11 @@
     "@storybook/node-logger": "6.1.0-alpha.35",
     "@storybook/theming": "6.1.0-alpha.35",
     "core-js": "^3.0.1",
-    "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3 || ^17.0.0",
     "ts-dedent": "^2.0.0"
+  },
+  "peerDependencies": {
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
