--- a/addons/cssresources/package.json
+++ b/addons/cssresources/package.json
@@ -39,14 +39,16 @@
     "@storybook/theming": "6.1.0-alpha.35",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
-    "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.15.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2"
+  },
+  "peerDependencies": {
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
