--- a/app/ember/package.json
+++ b/app/ember/package.json
@@ -42,7 +42,9 @@
     "@babel/core": "*",
     "babel-plugin-ember-modules-api-polyfill": "^2.12.0",
     "babel-plugin-htmlbars-inline-precompile": "2 || 3",
-    "ember-source": "^3.16.0"
+    "ember-source": "^3.16.0",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
