--- a/app/html/package.json
+++ b/app/html/package.json
@@ -45,7 +45,9 @@
     "ts-dedent": "^2.0.0"
   },
   "peerDependencies": {
-    "@babel/core": "*"
+    "@babel/core": "*",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
