--- a/app/marionette/package.json
+++ b/app/marionette/package.json
@@ -39,6 +39,8 @@
     "@babel/core": "*",
     "backbone": "*",
     "backbone.marionette": "*",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0",
     "underscore": "*"
   },
   "engines": {
