--- a/app/riot/package.json
+++ b/app/riot/package.json
@@ -49,6 +49,8 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0",
     "riot": "^3.0.0 || ^4.0.0",
     "riot-compiler": "^3.5.1 || ^4.0.0",
     "riot-hot-reload": "^1.0.0",
