--- a/addons/a11y/package.json
+++ b/addons/a11y/package.json
@@ -45,8 +45,6 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "lodash": "^4.17.15",
-    "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3 || ^17.0.0",
     "react-sizeme": "^2.5.2",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
@@ -55,6 +53,10 @@
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
     "@types/webpack-env": "^1.15.2"
+  },
+  "peerDependencies": {
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
