--- a/addons/essentials/package.json
+++ b/addons/essentials/package.json
@@ -38,8 +38,6 @@
     "@storybook/api": "6.1.0-alpha.35",
     "@storybook/node-logger": "6.1.0-alpha.35",
     "core-js": "^3.0.1",
-    "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
   },
@@ -53,6 +51,8 @@
     "@babel/core": "^7.9.6",
     "@storybook/vue": "6.1.0-alpha.35",
     "babel-loader": "^8.0.0",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0",
     "webpack": ">=4"
   },
   "peerDependenciesMeta": {
