--- a/addons/google-analytics/package.json
+++ b/addons/google-analytics/package.json
@@ -24,10 +24,12 @@
     "@storybook/core-events": "6.1.0-alpha.35",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
-    "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3 || ^17.0.0",
     "react-ga": "^2.5.7",
     "regenerator-runtime": "^0.13.7"
+  },
+  "peerDependencies": {
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
