--- a/addons/graphql/package.json
+++ b/addons/graphql/package.json
@@ -40,10 +40,12 @@
     "graphiql": "^0.17.5",
     "graphql": "^15.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
     "webpack": "^4.43.0"
+  },
+  "peerDependencies": {
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
