--- a/addons/toolbars/package.json
+++ b/addons/toolbars/package.json
@@ -34,9 +34,11 @@
     "@storybook/api": "6.1.0-alpha.35",
     "@storybook/client-api": "6.1.0-alpha.35",
     "@storybook/components": "6.1.0-alpha.35",
-    "core-js": "^3.0.1",
-    "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3 || ^17.0.0"
+    "core-js": "^3.0.1"
+  },
+  "peerDependencies": {
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
