--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -53,7 +53,9 @@
     "webpack": "^4.33.0"
   },
   "peerDependencies": {
-    "aurelia": "*"
+    "aurelia": "*",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
