--- a/app/mithril/package.json
+++ b/app/mithril/package.json
@@ -50,7 +50,9 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "mithril": "^1.1.6 || ^2.0.0"
+    "mithril": "^1.1.6 || ^2.0.0",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
