--- a/app/preact/package.json
+++ b/app/preact/package.json
@@ -48,7 +48,9 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "preact": "^8.0.0||^10.0.0"
+    "preact": "^8.0.0||^10.0.0",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
