--- a/app/rax/package.json
+++ b/app/rax/package.json
@@ -47,7 +47,9 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "rax": "^0.4.0 || ^1.0.0"
+    "rax": "^0.4.0 || ^1.0.0",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
