--- a/app/react/package.json
+++ b/app/react/package.json
@@ -50,10 +50,8 @@
     "global": "^4.3.2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
     "react-dev-utils": "^10.0.0",
     "react-docgen-typescript-plugin": "^0.6.0",
-    "react-dom": "^16.8.3 || ^17.0.0",
     "react-refresh": "^0.8.3",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
@@ -65,7 +63,9 @@
     "@types/webpack": "^4.41.12"
   },
   "peerDependencies": {
-    "@babel/core": "^7.11.5"
+    "@babel/core": "^7.11.5",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
