--- a/app/server/package.json
+++ b/app/server/package.json
@@ -49,6 +49,10 @@
   "devDependencies": {
     "fs-extra": "^9.0.0"
   },
+  "peerDependencies": {
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
+  },
   "engines": {
     "node": ">=8.0.0"
   },
