--- a/app/svelte/package.json
+++ b/app/svelte/package.json
@@ -49,6 +49,8 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0",
     "svelte": "^3.1.0",
     "svelte-loader": "^2.9.1"
   },
