--- a/examples/html-kitchen-sink/package.json
+++ b/examples/html-kitchen-sink/package.json
@@ -34,7 +34,9 @@
     "eventemitter3": "^4.0.0",
     "format-json": "^1.0.3",
     "global": "^4.3.2",
-    "postcss-color-rebeccapurple": "^6.0.0"
+    "postcss-color-rebeccapurple": "^6.0.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "storybook": {
     "chromatic": {
