--- a/examples/rax-kitchen-sink/package.json
+++ b/examples/rax-kitchen-sink/package.json
@@ -36,6 +36,8 @@
     "@storybook/theming": "6.1.0-alpha.35",
     "babel-eslint": "^10.0.3",
     "build-plugin-rax-app": "^0.2.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "stylesheet-loader": "^0.8.0"
   },
   "storybook": {
