--- a/examples/riot-kitchen-sink/package.json
+++ b/examples/riot-kitchen-sink/package.json
@@ -30,6 +30,8 @@
     "cross-env": "^7.0.0",
     "file-loader": "^6.0.0",
     "raw-loader": "^4.0.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "riot-tag-loader": "^2.1.0",
     "svg-url-loader": "^5.0.0",
     "webpack": "^4.33.0",
