--- a/examples/vue-cli/package.json
+++ b/examples/vue-cli/package.json
@@ -23,6 +23,8 @@
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-typescript": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "typescript": "^3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
