--- a/examples/vue-kitchen-sink/package.json
+++ b/examples/vue-kitchen-sink/package.json
@@ -32,6 +32,8 @@
     "cross-env": "^7.0.0",
     "file-loader": "^6.0.0",
     "prop-types": "^15.7.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "svg-url-loader": "^5.0.0",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
