--- a/examples/web-components-kitchen-sink/package.json
+++ b/examples/web-components-kitchen-sink/package.json
@@ -34,7 +34,9 @@
     "eventemitter3": "^4.0.0",
     "format-json": "^1.0.3",
     "global": "^4.3.2",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.2.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "storybook": {
     "chromatic": {
