--- a/lib/addons/package.json
+++ b/lib/addons/package.json
@@ -36,9 +36,11 @@
     "@storybook/theming": "6.1.0-alpha.35",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
-    "react": "^16.8.3 || ^17.0.0",
-    "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7"
+  },
+  "peerDependencies": {
+    "react": "15 || 16 || ^17.0.0",
+    "react-dom": "15 || 16 || ^17.0.0"
   },
   "publishConfig": {
     "access": "public"
