Use `react` and `react-dom` 16.13.1 as 16.14.0 looks to cause trouble with examples/official-storybook
Example:
ERR! SyntaxError: /tmp/storybook/examples/official-storybook/stories/notes/notes.md: pragma and pragmaFrag cannot be set when runtime is automatic.

--- a/examples/mithril-kitchen-sink/package.json
+++ b/examples/mithril-kitchen-sink/package.json
@@ -21,8 +21,8 @@
     "@storybook/addons": "6.1.0-alpha.35",
     "@storybook/mithril": "6.1.0-alpha.35",
     "@storybook/source-loader": "6.1.0-alpha.35",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "webpack": "^4.33.0"
   },
   "storybook": {
