--- a/examples/aurelia-kitchen-sink/package.json
+++ b/examples/aurelia-kitchen-sink/package.json
@@ -40,8 +40,8 @@
     "html-webpack-plugin": "^3.0.0",
     "htmlhint": "^0.11.0",
     "node-sass": "^4.12.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.0",
     "style-loader": "^0.23.0",
