--- a/examples/cra-kitchen-sink/package.json
+++ b/examples/cra-kitchen-sink/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "global": "^4.3.2",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-lifecycles-compat": "^3.0.4"
   },
   "devDependencies": {
