--- a/examples/cra-ts-essentials/package.json
+++ b/examples/cra-ts-essentials/package.json
@@ -28,8 +28,8 @@
     "@types/react": "^16.0.0",
     "@types/react-dom": "16.9.8",
     "global": "^4.3.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.3"
   },
