--- a/examples/standalone-preview/package.json
+++ b/examples/standalone-preview/package.json
@@ -8,7 +8,7 @@
   "devDependencies": {
     "@storybook/react": "6.1.0-alpha.35",
     "parcel": "^1.12.3",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
