--- a/examples/svelte-kitchen-sink/package.json
+++ b/examples/svelte-kitchen-sink/package.json
@@ -23,8 +23,8 @@
     "@storybook/addons": "6.1.0-alpha.35",
     "@storybook/source-loader": "6.1.0-alpha.35",
     "@storybook/svelte": "6.1.0-alpha.35",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "storybook": {
     "chromatic": {
