--- a/examples/web-components-kitchen-sink/package.json
+++ b/examples/web-components-kitchen-sink/package.json
@@ -35,8 +35,8 @@
     "format-json": "^1.0.3",
     "global": "^4.3.2",
     "lit-element": "^2.2.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "storybook": {
     "chromatic": {
