--- a/package.json
+++ b/package.json
@@ -191,8 +191,8 @@
     "p-limit": "^2.3.0",
     "prettier": "~2.0.5",
     "raf": "^3.4.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-test-renderer": "^16.8.3",
     "recursive-copy": "^2.0.10",
     "regenerator-runtime": "^0.13.7",
