Core: Align react and react-dom version specifiers

--- a/examples/standalone-preview/package.json
+++ b/examples/standalone-preview/package.json
@@ -8,7 +8,7 @@
   "devDependencies": {
     "@storybook/react": "6.1.0-alpha.34",
     "parcel": "^1.12.3",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0"
   }
 }
