--- a/app/react/package.json
+++ b/app/react/package.json
@@ -50,7 +50,7 @@
     "global": "^4.3.2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dev-utils": "^10.0.0",
     "react-docgen-typescript-plugin": "^0.6.0",
     "react-dom": "^16.8.3 || ^17.0.0",
