--- a/examples/official-storybook/package.json
+++ b/examples/official-storybook/package.json
@@ -55,7 +55,7 @@
     "lodash": "^4.17.15",
     "paths.macro": "^2.0.2",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0",
     "terser-webpack-plugin": "^3.0.0",
     "ts-loader": "^6.0.0",
