--- a/examples/react-ts/package.json
+++ b/examples/react-ts/package.json
@@ -14,7 +14,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "prop-types": "15.7.2",
-    "react": "^16.8.3",
+    "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0"
