Keep react-test-renderer in sync with react

--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -47,7 +47,7 @@
     "pretty-format": "^26.4.0",
     "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0",
-    "react-test-renderer": "^16.8.3",
+    "react-test-renderer": "^16.8.3 || ^17.0.0",
     "read-pkg-up": "^7.0.0",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
