--- a/package.json
+++ b/package.json
@@ -193,7 +193,7 @@
     "raf": "^3.4.0",
     "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0",
-    "react-test-renderer": "^16.8.3",
+    "react-test-renderer": "^16.8.3 || ^17.0.0",
     "recursive-copy": "^2.0.10",
     "regenerator-runtime": "^0.13.7",
     "remark": "^12.0.0",
