--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -33,6 +33,8 @@
     "@storybook/node-logger": "6.1.0-alpha.35",
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "global": "^4.3.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "ts-loader": "^6.0.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.33.0"
@@ -53,9 +55,7 @@
     "webpack": "^4.33.0"
   },
   "peerDependencies": {
-    "aurelia": "*",
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0"
+    "aurelia": "*"
   },
   "publishConfig": {
     "access": "public"
