--- a/app/html/package.json
+++ b/app/html/package.json
@@ -41,13 +41,13 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "html-loader": "^1.0.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
   },
   "peerDependencies": {
-    "@babel/core": "*",
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0"
+    "@babel/core": "*"
   },
   "engines": {
     "node": ">=8.0.0"
