--- a/app/marionette/package.json
+++ b/app/marionette/package.json
@@ -30,6 +30,8 @@
     "core-js": "^3.0.1",
     "global": "^4.3.2",
     "html-loader": "^1.0.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
@@ -39,8 +41,6 @@
     "@babel/core": "*",
     "backbone": "*",
     "backbone.marionette": "*",
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0",
     "underscore": "*"
   },
   "engines": {
