--- a/app/marko/package.json
+++ b/app/marko/package.json
@@ -38,14 +38,14 @@
     "@storybook/core": "6.1.0-alpha.35",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
   },
   "peerDependencies": {
     "@babel/core": "*",
     "marko": "^4.15.2 || ^5.0.0-next || ^5",
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0",
     "webpack": "^4"
   },
   "engines": {
