--- a/app/mithril/package.json
+++ b/app/mithril/package.json
@@ -42,6 +42,8 @@
     "@types/webpack-env": "^1.15.2",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
   },
@@ -50,9 +52,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "mithril": "^1.1.6 || ^2.0.0",
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0"
+    "mithril": "^1.1.6 || ^2.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
