--- a/app/server/package.json
+++ b/app/server/package.json
@@ -42,16 +42,14 @@
     "@types/webpack-env": "^1.15.2",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "regenerator-runtime": "^0.13.7",
     "safe-identifier": "^0.4.1",
     "ts-dedent": "^2.0.0"
   },
   "devDependencies": {
     "fs-extra": "^9.0.0"
-  },
-  "peerDependencies": {
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
