--- a/app/svelte/package.json
+++ b/app/svelte/package.json
@@ -38,6 +38,8 @@
     "@storybook/core": "6.1.0-alpha.35",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "regenerator-runtime": "^0.13.7",
     "sveltedoc-parser": "^3.0.4",
     "ts-dedent": "^2.0.0"
@@ -49,8 +51,6 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "react": "15 || 16 || ^17.0.0",
-    "react-dom": "15 || 16 || ^17.0.0",
     "svelte": "^3.1.0",
     "svelte-loader": "^2.9.1"
   },
